# beautiful_cpp

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  beautiful.cpp
include/static/: example.h
src/: CMakeLists.txt
src/static/: example.cpp
